# Photosynthesis-Dorahacks-web3-competition-winner

./: README.md  markdown.sh  markdownscan.sh
cosmwasm/: adserver.rs  cookiesync.rs  photosynthesis.rs
photosynthesis-main/archway-main/: Makefile  README.md  buf.yaml  docker-compose.yaml  go.sum
photosynthesis-main/archway-main/app/: app.go
photosynthesis-main/archway-main/ci/: titus-1-faucet-ingress.yaml
photosynthesisv10/photosynthesis-main/: data.py
photosynthesisv11/: esingestion.py
photosynthesisv2/: README.md
photosynthesisv9/: es_bulk_ingestion.py  esingestion.py  esingestionforML.py  esingestionforMLmillisecond.py
prototypesindev/: ArchwayStrideliquidstakingcosmwasmprototype.rs  adserver.rs  adserverevmos.sol  adservingPLT.rs  asyncampaign.rs  campaignNFT.rs  cookie-merkle-trees.rs  cookie-sync.sol  datamarketplace.rs  engagementtimesupportcookiemerkletree.rs  headerbidding.rs  imagemarketplace.rs  johnwick.rs  jumanjijourney.rs  liquidstaking.rs  matrix.rs  matrixbrainbattery.rs  milkywayhybridliquidstaking.rs  missionimpossiblecreditcoin.rs  personacoin.rs  personacoinplt.rs  photosynthesis.rs  photosynthesisv1.rs  regen.rs  scheduler.rs  stakingsystem.rs  upload_to_ipfs.rs  uploadtoIPFS.js
prototypesindev/adserver-cw_multi_test/: Cargo.toml  lib.rs
prototypesindev/adserver-cw_multi_test/src/: contract.rs
prototypesindev/adserversmartcontract/: Cargo.toml  Developing.md  NOTICE  README.md  config.json
prototypesindev/async-campaign/: lib.rs
prototypesindev/cookiesync-cw_multi_test/: Cargo.toml  lib.rs
prototypesindev/cookiesyncsmartcontract/: Cargo.toml  README.md  config.json
prototypesindev/matrixbrainbatterysmartcontract/: Cargo.toml  Developing.md  README.md
prototypesindev/milkywayhybridliquidstaking/: Cargo.toml  lib.rs  msg.rs  state.rs
prototypesindev/milkywayhybridliquidstaking/src/: contract.rs  contractcentralliquidstakecentralredeem.rs
(+3182 files in other folders)
