[package]
name = "dapps"
version = "0.1.0"
authors = ["root"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
incremental = false
lto = true
opt-level = 3
overflow-checks = true
panic = 'abort'
rpath = false

[features]
backtraces = ["cosmwasm-std/backtraces"]
library = []

[dependencies]
archway-bindings = "0.1.0"
cosmwasm-schema = "1.2.2"
cosmwasm-std = "1.2.2"
cosmwasm-storage = "1.2.2"
cw-storage-plus = "1.0.1"
cw2 = "1.0.1"
cw20 = "1.0.0"
cw721 = "0.17.0"
rand = "0.8"
sha2 = "0.10"
schemars = "0.8.12"
serde = { version = "1.0.152", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.38" }

[dev-dependencies]
cw-multi-test = "0.16.2"

